fix: mobile sidebars z-index (3000) over header

--- a/anticode.css
+++ b/anticode.css
@@ -1402,7 +1402,7 @@ input:focus {
         position: absolute;
         left: -100%;
         top: 0;
-        z-index: 2000;
+        z-index: 3000;
         /* Increased from 1000 to cover chat input */
         width: 280px;
         height: 100%;
@@ -1453,7 +1453,7 @@ input:focus {
         position: absolute;
         right: -100%;
         top: 0;
-        z-index: 2000;
+        z-index: 3000;
         /* Increased from 1000 */
         width: 280px;
         height: 100%;
